tests/fixtures/positive/style/UnusedPrivateProperty.kt
package fixtures.positive.style

class DataAndStorageSettingsRepository {
    private val context = "application"

    fun totalStorageUse(): Long = 0L
}
