tests/fixtures/negative/style/UnusedPrivateFunction.kt
package fixtures.negative.style

private fun used() {
    println("called below")
}

fun main() {
    used()
}
